Updates from Overleaf

--- a/example.tex
+++ b/example.tex
@@ -1,4 +1,4 @@
-\documentclass{waver}
+\documentclass{resume}
 \begin{document}
 
 
@@ -15,7 +15,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Education
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{Education}
+\begin{resumesection}{Education}
 
 \begin{xheading1}{Massachusetts Institute of Technology (MIT)}{Cambridge, Massachusetts, United States}
 \begin{xsubheading1}{Bachelor of Science in Biology, GPA: 4.6/5.0}{2009 -- 2013}
@@ -25,12 +25,12 @@
 \end{xsubheading1}
 \end{xheading1}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Experience
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{Experience}
+\begin{resumesection}{Experience}
 
 \begin{xheading1}{Putnam Associates}{Burlington, Massachusetts, United States}
 \begin{xsubheading1}{Analyst}{2013}
@@ -59,12 +59,12 @@
 \end{xsubheading1}
 \end{xheading1}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Activities & Extracurriculars
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{Activities \& Extracurriculars}
+\begin{resumesection}{Activities \& Extracurriculars}
 
 \begin{xheading1}{March of Dimes Birth Defects Foundation}{Boston, Massachusetts, United States}
 \begin{xsubheading1}{Director of Massachusetts Youth Public Affairs}{2002 -- 2013}
@@ -88,12 +88,12 @@
 \end{xsubheading1}
 \end{xheading1}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Awards & Accomplishments
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{Awards \& Accomplishments}
+\begin{resumesection}{Awards \& Accomplishments}
 
 \begin{xheading4}{Robert C. Byrd Scholarship}
 Awarded to top 1\% of U.S. students for academic excellence.
@@ -103,7 +103,7 @@ Awarded to top 1\% of U.S. students for academic excellence.
 Awarded to top 20,000 students worldwide for achievements in mathematics and science.
 \end{xheading4}
 
-\end{xsection}
+\end{resumesection}
 
 
 \end{document}
