--- a/template-cn.tex
+++ b/template-cn.tex
@@ -1,4 +1,4 @@
-\documentclass{waver}
+\documentclass{resume}
 \begin{document}
 
 
@@ -15,7 +15,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 教育背景
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{教育背景}
+\begin{resumesection}{教育背景}
 
 \begin{xheading1}{[院校名]}{[地点]}
 \begin{xsubheading1}{[学位]}{[开始和结束日期]}
@@ -24,12 +24,12 @@
 \end{xsubheading1}
 \end{xheading1}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 工作经历
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{工作经历}
+\begin{resumesection}{工作经历}
 
 \begin{xheading1}{[机构]}{[地点]}
 \begin{xsubheading1}{[职位 / 职责 / 项目名]}{[开始和结束日期]}
@@ -43,12 +43,12 @@
 \end{xsubheading1}
 \end{xheading1}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 社会实践
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{社会实践}
+\begin{resumesection}{社会实践}
 
 \begin{xheading1}{[活动]}{[地点]}
 \begin{xsubheading2}{[职责 / 项目名]}{[开始和结束日期]}
@@ -61,12 +61,12 @@
 \end{xsubheading1}
 \end{xheading1}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 荣誉奖项
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{荣誉奖项}
+\begin{resumesection}{荣誉奖项}
 
 \begin{xheading3}{[奖项]}{[日期]}
 \end{xheading3}
@@ -75,12 +75,12 @@
 \item {[成就]}
 \end{xheading2}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 专业技能
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{专业技能}
+\begin{resumesection}{专业技能}
 
 \begin{xheading4}{[分类]}
 [按相关性排序]
@@ -94,7 +94,7 @@
 [按相关性排序]
 \end{xheading4}
 
-\end{xsection}
+\end{resumesection}
 
 
 \end{document}
