--- a/template-en.tex
+++ b/template-en.tex
@@ -1,4 +1,4 @@
-\documentclass{waver}
+\documentclass{resume}
 \begin{document}
 
 
@@ -15,7 +15,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Education
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{Education}
+\begin{resumesection}{Education}
 
 \begin{xheading1}{[Institution]}{[Location]}
 \begin{xsubheading1}{[Degree]}{[Start and End Dates]}
@@ -24,12 +24,12 @@
 \end{xsubheading1}
 \end{xheading1}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Experience
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{Experience}
+\begin{resumesection}{Experience}
 
 \begin{xheading1}{[Organization]}{[Location]}
 \begin{xsubheading1}{[Title / Role / Project Name]}{[Start and End Dates]}
@@ -43,12 +43,12 @@
 \end{xsubheading1}
 \end{xheading1}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Activities & Extracurriculars
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{Activities \& Extracurriculars}
+\begin{resumesection}{Activities \& Extracurriculars}
 
 \begin{xheading1}{[Activity]}{[Location]}
 \begin{xsubheading2}{[Role / Project Name]}{[Start and End Dates]}
@@ -61,12 +61,12 @@
 \end{xsubheading1}
 \end{xheading1}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Awards & Accomplishments
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{Awards \& Accomplishments}
+\begin{resumesection}{Awards \& Accomplishments}
 
 \begin{xheading3}{[Award]}{[Date]}
 \end{xheading3}
@@ -75,12 +75,12 @@
 \item {[Accomplishment]}
 \end{xheading2}
 
-\end{xsection}
+\end{resumesection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Skills & Interests
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{xsection}{Skills \& Interests}
+\begin{resumesection}{Skills \& Interests}
 
 \begin{xheading4}{[Category]}
 [List in order of relevance]
@@ -94,7 +94,7 @@
 [List in order of relevance]
 \end{xheading4}
 
-\end{xsection}
+\end{resumesection}
 
 
 \end{document}
