Updates from Overleaf

--- a/resume-template-cn.tex
+++ b/resume-template-cn.tex
@@ -17,12 +17,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{resumesection}{教育背景}
 
-\begin{xheading1}{[院校名]}{[地点]}
-\begin{xsubheading1}{[学位]}{[开始和结束日期]}
+\begin{resumeheading1}{[院校名]}{[地点]}
+\begin{resumesubheading1}{[学位]}{[开始和结束日期]}
 \item \textbf{GPA}: [GPA分数]
 \item \textbf{相关课程}: [相关课程]
-\end{xsubheading1}
-\end{xheading1}
+\end{resumesubheading1}
+\end{resumeheading1}
 
 \end{resumesection}
 
@@ -31,17 +31,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{resumesection}{工作经历}
 
-\begin{xheading1}{[机构]}{[地点]}
-\begin{xsubheading1}{[职位 / 职责 / 项目名]}{[开始和结束日期]}
+\begin{resumeheading1}{[机构]}{[地点]}
+\begin{resumesubheading1}{[职位 / 职责 / 项目名]}{[开始和结束日期]}
 \item {[动词] + [任务] $\rightarrow$ [结果 / 成就]}
-\end{xsubheading1}
-\end{xheading1}
+\end{resumesubheading1}
+\end{resumeheading1}
 
-\begin{xheading1}{[机构]}{[地点]}
-\begin{xsubheading1}{[职位 / 职责 / 项目名]}{[开始和结束日期]}
+\begin{resumeheading1}{[机构]}{[地点]}
+\begin{resumesubheading1}{[职位 / 职责 / 项目名]}{[开始和结束日期]}
 \item {[动词] + [任务] $\rightarrow$ [结果 / 成就]}
-\end{xsubheading1}
-\end{xheading1}
+\end{resumesubheading1}
+\end{resumeheading1}
 
 \end{resumesection}
 
@@ -50,16 +50,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{resumesection}{社会实践}
 
-\begin{xheading1}{[活动]}{[地点]}
-\begin{xsubheading2}{[职责 / 项目名]}{[开始和结束日期]}
-\end{xsubheading2}
-\end{xheading1}
+\begin{resumeheading1}{[活动]}{[地点]}
+\begin{resumesubheading2}{[职责 / 项目名]}{[开始和结束日期]}
+\end{resumesubheading2}
+\end{resumeheading1}
 
-\begin{xheading1}{[活动]}{[地点]}
-\begin{xsubheading1}{[职责 / 项目名]}{[开始和结束日期]}
+\begin{resumeheading1}{[活动]}{[地点]}
+\begin{resumesubheading1}{[职责 / 项目名]}{[开始和结束日期]}
 \item {[动词] + [任务] $\rightarrow$ [结果 / 成就]}
-\end{xsubheading1}
-\end{xheading1}
+\end{resumesubheading1}
+\end{resumeheading1}
 
 \end{resumesection}
 
@@ -68,12 +68,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{resumesection}{荣誉奖项}
 
-\begin{xheading3}{[奖项]}{[日期]}
-\end{xheading3}
+\begin{resumeheading3}{[奖项]}{[日期]}
+\end{resumeheading3}
 
-\begin{xheading2}{[奖项]}{[日期]}
+\begin{resumeheading2}{[奖项]}{[日期]}
 \item {[成就]}
-\end{xheading2}
+\end{resumeheading2}
 
 \end{resumesection}
 
@@ -82,17 +82,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{resumesection}{专业技能}
 
-\begin{xheading4}{[分类]}
+\begin{resumeheading4}{[分类]}
 [按相关性排序]
-\end{xheading4}
+\end{resumeheading4}
 
-\begin{xheading4}{[分类]}
+\begin{resumeheading4}{[分类]}
 [按相关性排序]
-\end{xheading4}
+\end{resumeheading4}
 
-\begin{xheading4}{[分类]}
+\begin{resumeheading4}{[分类]}
 [按相关性排序]
-\end{xheading4}
+\end{resumeheading4}
 
 \end{resumesection}
 
