--- a/resume-template-en.tex
+++ b/resume-template-en.tex
@@ -17,12 +17,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{resumesection}{Education}
 
-\begin{xheading1}{[Institution]}{[Location]}
-\begin{xsubheading1}{[Degree]}{[Start and End Dates]}
+\begin{resumeheading1}{[Institution]}{[Location]}
+\begin{resumesubheading1}{[Degree]}{[Start and End Dates]}
 \item \textbf{GPA}: [GPA]
 \item \textbf{Coursework}: [Coursework]
-\end{xsubheading1}
-\end{xheading1}
+\end{resumesubheading1}
+\end{resumeheading1}
 
 \end{resumesection}
 
@@ -31,17 +31,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{resumesection}{Experience}
 
-\begin{xheading1}{[Organization]}{[Location]}
-\begin{xsubheading1}{[Title / Role / Project Name]}{[Start and End Dates]}
+\begin{resumeheading1}{[Organization]}{[Location]}
+\begin{resumesubheading1}{[Title / Role / Project Name]}{[Start and End Dates]}
 \item {[Action Verb] + [Task] $\rightarrow$ [Outcome / Accomplishment]}
-\end{xsubheading1}
-\end{xheading1}
+\end{resumesubheading1}
+\end{resumeheading1}
 
-\begin{xheading1}{[Organization]}{[Location]}
-\begin{xsubheading1}{[Title / Role / Project Name]}{[Start and End Dates]}
+\begin{resumeheading1}{[Organization]}{[Location]}
+\begin{resumesubheading1}{[Title / Role / Project Name]}{[Start and End Dates]}
 \item {[Action Verb] + [Task] $\rightarrow$ [Outcome / Accomplishment]}
-\end{xsubheading1}
-\end{xheading1}
+\end{resumesubheading1}
+\end{resumeheading1}
 
 \end{resumesection}
 
@@ -50,16 +50,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{resumesection}{Activities \& Extracurriculars}
 
-\begin{xheading1}{[Activity]}{[Location]}
-\begin{xsubheading2}{[Role / Project Name]}{[Start and End Dates]}
-\end{xsubheading2}
-\end{xheading1}
+\begin{resumeheading1}{[Activity]}{[Location]}
+\begin{resumesubheading2}{[Role / Project Name]}{[Start and End Dates]}
+\end{resumesubheading2}
+\end{resumeheading1}
 
-\begin{xheading1}{[Activity]}{[Location]}
-\begin{xsubheading1}{[Role / Project Name]}{[Start and End Dates]}
+\begin{resumeheading1}{[Activity]}{[Location]}
+\begin{resumesubheading1}{[Role / Project Name]}{[Start and End Dates]}
 \item {[Action Verb] + [Task] $\rightarrow$ [Outcome / Accomplishment]}
-\end{xsubheading1}
-\end{xheading1}
+\end{resumesubheading1}
+\end{resumeheading1}
 
 \end{resumesection}
 
@@ -68,12 +68,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{resumesection}{Awards \& Accomplishments}
 
-\begin{xheading3}{[Award]}{[Date]}
-\end{xheading3}
+\begin{resumeheading3}{[Award]}{[Date]}
+\end{resumeheading3}
 
-\begin{xheading2}{[Award]}{[Date]}
+\begin{resumeheading2}{[Award]}{[Date]}
 \item {[Accomplishment]}
-\end{xheading2}
+\end{resumeheading2}
 
 \end{resumesection}
 
@@ -82,17 +82,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{resumesection}{Skills \& Interests}
 
-\begin{xheading4}{[Category]}
+\begin{resumeheading4}{[Category]}
 [List in order of relevance]
-\end{xheading4}
+\end{resumeheading4}
 
-\begin{xheading4}{[Category]}
+\begin{resumeheading4}{[Category]}
 [List in order of relevance]
-\end{xheading4}
+\end{resumeheading4}
 
-\begin{xheading4}{[Category]}
+\begin{resumeheading4}{[Category]}
 [List in order of relevance]
-\end{xheading4}
+\end{resumeheading4}
 
 \end{resumesection}
 
